--- a/src/components/AudioVisContainer.module.css
+++ b/src/components/AudioVisContainer.module.css
@@ -1,11 +1,13 @@
 .container {
   position: relative;
+  width: 50vw;
+  height: 50vh;
 }
 
 .pointer {
   position: absolute;
   top: 0;
-  left: calc(var(--x) * 1px);
+  left: var(--x);
   width: 2px;
   height: 100%;
   background: blue;
